--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NoBsReact",
-  "name": "No Bs React Template",
+  "short_name": "HackerCrust",
+  "name": "HackerCrust",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
