--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,8 @@
 {
   "short_name": "HackerCrust",
   "name": "HackerCrust",
-  "icons": [],
+  "icons": [{"src":"/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},
+    {"src":"/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
