--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
+    "crypto": "^1.0.1",
     "gh-pages": "^6.0.0",
+    "grabity": "^1.0.5",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
+    "link-preview-js": "^3.0.5",
+    "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
