--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^6.0.0",
+    "html-react-parser": "^4.2.9",
     "html2canvas": "^1.4.1",
-    "react": "^18.2.0",
     "link-preview-js": "^3.0.5",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
